config-files/app-2-configs/app-2-dep.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:       
    metadata:
      labels:
        app: app-2
    spec:
      containers:
        - name: app-2
          image: ghcr.io/denoslab/ensf400-sample-app:v2
          ports:
            - containerPort: 80
