config-files/app-2-configs/app-2-svc.yaml
# Name: Brian Meta
# UCID: 30142390
# Course: ENSF 400
# Section: L01, B01
# Assignment 3

apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
spec:
  selector:
    name: app-2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
